--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,73 +1,74 @@
-@import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap');
-
 body {
-    background-color: var(--background);
+    background-color: var(--background-color);
     font-family: Figtree;
 }
 
 main {
     display: flex;
-    height: 100vh;
     justify-content: center;
     align-items: center;
+    height: 100vh;
 }
 
 .blog-card {
     display: flex;
     flex-direction: column;
     width: 335px;
-    background-color: var(--background-blog);
     padding: 23px;
-
     border-radius: 20px;
-    border: 1px solid black;
 
-    border-right: 10px solid black;
-    border-bottom: 10px solid black;
+    background-color: var(--background-light);
+    border: solid black;
+    border-width: 1px 10px 10px 1px;    
 }
 
 .blog-card .image {
     border-radius: 10px;
-    margin-bottom: 25px;
+    width: 100%;
 }
 
-.blog-card .status {
-    background-color: var(--background);
+.blog-card .progress .status {
     display: inline-block;
     padding: 6px 12px;
     border-radius: 5px;
+    margin-top: 25px;
+    
     font-size: 14px;
     font-weight: 800;
+    background-color: var(--background-color);
 }
 
 .blog-card .published {
     font-size: 14px;
+    margin-top: 14px;
     font-weight: 600;
-    padding: 14px 0 17px;
 }
 
 .blog-card .title {
+    margin-top: 20px;
     font-weight: 800;
 }
 
 .blog-card .description {
-    color: var(--color-500);
-    padding: 20px 0;
+    margin-top: 14px;
     line-height: 24px;
+    color: var(--color-dark);
 }
 
 .blog-card .blog-autor {
     display: flex;
-    flex-direction: row;
     align-items: center;
+    margin-top: 20px;
 }
 
 .blog-card .blog-autor .avatar{
     width: 32px;
+    border-radius: 50%;
+    border: 1px solid black;
 }
 
 .blog-card .blog-autor .name {
-    font-weight: 800;
     font-size: 14px;
-    padding-left: 10px;
+    margin-left: 10px;
+    font-weight: 800;
 }
