--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -1,7 +1,5 @@
 :root {
-    --background: hsl(47, 88%, 63%);
-    --background-blog: hsl(0, 0%, 100%);
-
-    --color-500: hsl(0, 0%, 42%);
-    --color-950: hsl(0, 0%, 7%);
+    --background-color: hsl(47, 88%, 63%);
+    --background-light: hsl(0, 0%, 100%);
+    --color-dark: hsl(0, 0%, 7%);
 }
